@@ -20,13 +20,13 @@
 		<module>camunda-bpm-karaf-commands</module>
 	</modules>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<camunda-bpm.version>7.1.0-Final</camunda-bpm.version>
-		<java.version>1.6</java.version>
-		<junit.version>4.11</junit.version>
-		<paxexam.version>3.4.0</paxexam.version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <camunda-bpm.version>7.2.0-SNAPSHOT</camunda-bpm.version>
+        <java.version>1.6</java.version>
+    	<junit.version>4.11</junit.version>
+    	<paxexam.version>3.5.0</paxexam.version>
 		<logback.version>0.9.20</logback.version>
 		<osgi.version>4.2.0</osgi.version>
 		<mockito.version>1.9.5</mockito.version>
@@ -62,6 +62,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.15</version>
+					<configuration>
+    					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+  					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
